--- a/style.css
+++ b/style.css
@@ -1,77 +1,61 @@
-
- .trafficlight{
-    height: 350px;
-    width: 170px;
-    display: flex;
-    flex-direction: column;
-    border: 2px solid black;
-    justify-content: space-evenly;
-    align-items: center;
-    background-color: black;
-    border-radius:50px ;
-
-    
- }
-   
-   .box1, .box2, .box3 {
-   height: 70px;
-   width: 70px;
-   border: 1px solid black;
-   border-radius: 50%;
-   background-color: gray;
-   transition: background-color 0.5s ease;
-   animation-duration: 15s;
-   animation-iteration-count: infinite;
-   
+body {
+  background: #111;
+  color: #fff;
+  font-family: Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 50px;
 }
 
-.box1 {
-   animation-name: redLight ;
+.traffic-light {
+  width: 100px;
+  background: #333;
+  padding: 20px;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: 20px;
 }
 
-.box2 {
-   animation-name: yellowLight ;
-   
+.light {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  background: #111;
+  margin: 0 auto;
+  transition: background 0.3s ease;
 }
 
-.box3 {
-   animation-name: greenLight;
-   
+.red.active {
+  background: red;
 }
 
-/* Keyframes for each light */
-@keyframes redLight {
-   0%, 0.01% { background-color: gray; }
-   0.01%,33.33%{ background-color: red; }
-   33.34%, 100% { background-color: gray; }
+.yellow.active {
+  background: yellow;
 }
 
-@keyframes yellowLight {
-   0%, 33.33% { background-color: gray; }
-   33.34%,66.66%  { background-color: yellow; }
-   66.67% ,100% { background-color: gray; }
+.green.active {
+  background: green;
 }
 
-@keyframes greenLight {
-   0%, 66.66%{ background-color: gray; }
-   66.67%,99.99% { background-color: green; }
-   100% { background-color: gray; }
+input {
+  margin-top: 20px;
+  padding: 10px;
+  width: 200px;
 }
 
+button {
+  margin-top: 10px;
+  padding: 8px 20px;
+  background: #00f780;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
 
- .pole{
-    margin-left: 72px;
-    height: 200px;
-    width: 25px;
-    border: 2px solid black;
-    background-color: black;
-
- }
- .base{
-    
-    height: 20px;
-    width: 180px;
-    border: 2px solid black;
-    background-color: black;
- }
-
+#countdown {
+  margin-top: 10px;
+  font-size: 18px;
+}
