--- a/style.css
+++ b/style.css
@@ -2,60 +2,56 @@ body {
   background: #111;
   color: #fff;
   font-family: Arial, sans-serif;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-top: 50px;
-}
-
-.traffic-light {
-  width: 100px;
-  background: #333;
-  padding: 20px;
-  border-radius: 20px;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  margin-top: 20px;
-}
-
-.light {
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  background: #111;
-  margin: 0 auto;
-  transition: background 0.3s ease;
-}
-
-.red.active {
-  background: red;
-}
-
-.yellow.active {
-  background: yellow;
-}
-
-.green.active {
-  background: green;
+  text-align: center;
+  padding: 30px;
 }
 
 input {
-  margin-top: 20px;
-  padding: 10px;
-  width: 200px;
+  width: 80px;
+  margin: 5px;
+  padding: 8px;
 }
 
 button {
+  padding: 10px 20px;
   margin-top: 10px;
-  padding: 8px 20px;
-  background: #00f780;
+  background: #00e676;
   border: none;
   border-radius: 5px;
   cursor: pointer;
 }
 
 #countdown {
-  margin-top: 10px;
-  font-size: 18px;
+  font-size: 20px;
+  margin-top: 20px;
 }
+
+.intersection {
+  display: grid;
+  grid-template-columns: 100px 100px;
+  grid-template-rows: 100px 100px;
+  gap: 10px;
+  justify-content: center;
+  margin: 30px auto;
+}
+
+.intersection h2{
+    margin-top: 25px;
+    color: black;
+}
+
+
+
+
+.light {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  background: #333;
+  margin: auto;
+  transition: background 0.3s;
+  
+}
+
+.green { background: green !important; }
+.red { background: #d10606 !important; }
